fixing color contrast

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -17,14 +17,6 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
-h1 {
-  color: var(--Acent2-color);
-}
-
-p {
-  color: var(--Acent1-color);
-}
-
 a {
   text-decoration: none;
 }
@@ -49,6 +41,7 @@ footer p {
   align-items: center;
   justify-content: center;
   grid-column: 2/4;
+  color: #000000;
 }
 
 footer div {
@@ -86,7 +79,7 @@ footer div {
   left: 50%;
   padding: 20px;
   transform: translateX(-50%);
-  background: rgba(218, 209, 209, 0.479);
+  background: rgba(60, 55, 55, 0.479);
   max-width: 80%;
   text-align: center;
 }
@@ -96,7 +89,7 @@ footer div {
   float: right;
 }
 
-.hero article h1 {
+.hero article h2 {
   color: white;
 }
 
